Fix modal menu chevron vertical alignment on submenu items.
Use inline-flex with centered pseudo-element chevrons instead of absolute top:2px positioning so arrows align with both top-level and nested submenu link text.

--- a/templates/shaper_helixultimate/scss/rtl.scss
+++ b/templates/shaper_helixultimate/scss/rtl.scss
@@ -177,4 +177,15 @@ body.rtl {
 			}
 		}
 	}
+
+	#modal-menu {
+		ul.sp-megamenu-parent li.sp-has-child {
+
+			>a:after,
+			>span:after {
+				margin-left: 0;
+				margin-right: 0.35em;
+			}
+		}
+	}
 }
